--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,66 @@
-body {
-background: url("./images/background.jpg") no-repeat center center fixed;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-min-height: 100vh;
+html {
+    box-sizing: border-box;}
+
+    body {
+        display: flex;
+        flex-direction: column;
+        background: url("./images/background.jpg");
+        margin: 0;
+        color: white;
+        font-family: roboto, arial, sans-serif;
+        min-height: 100vh;
+        
+        display: flex;
+    }
+
+.button-box {
 display: flex;
-flex-direction: column;
-margin: 100px;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-font-size: 40px;
+margin-left: 300px;
+    margin-top: 150px;
+    margin-bottom: 130px;
+    margin-right: 300px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+    border-left-width: 20px;
+    border-top-width: 20px;
+    width: 600px;
+    height: 250px;
+    gap: 80px;
+    justify-content: space-evenly;
+
+}
+
+.score-container {
+display: flex;
+gap: 0px;
+padding: 50px;
+padding-top: 0px;
 text-align: center;
 justify-content: center;
-  }
-  
+font-size: 30px;
 
-#topbox {
-display: flex;
-flex-direction: column;
-padding: 100px;
-}
-            .computerScore{
-
-            }
-
-            .computerScoreNum{
-
-            }
-
-            .computer{
-
-            }
-  
-
-#middlebox {
-display: flex;
-flex-direction: row;
-
-padding-left: 385px;
-width: 550px;
-height: 300px;
-gap: 40px;
 }
 
-            .rock{
-              
-            
-                
-            }
-
-            .paper{
-              
-            
-            }
-
-            .scissors{
-              
-            
-            }
-
-
-#bottombox {
-display: flex;
-flex-direction: column;
-padding: 100px;
+.sub-container1{
+    display: flex;
+height: 80px;
+    width: 80px;
+    padding-right: 1300px;
 }
 
-            .playerScore{
+.sub-container2{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: justify;
+height: 80px;
+    width: 80px;
+    padding-left: 500px;
+}
 
-            }
+.sub-container3{
+display: flex;
+padding-left: 560px;
 
-            .playerScoreNum{
-
-            }
-
-            .player{
-
-            }
-  
+}
